# KISB

./: .gitignore  DEVELOPER_NOTES.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: auto-versioning.yml  docker-image.yml  docker-publish.yml
docs/: debugging.md  user_tracking.txt
scripts/: __update-pdm.bat  pyproject.toml
src/: _kisb.py  _start.bat  _start.sh  bot.py  config.py  main.py  start.py  version.json
src/cache/: CACHE
src/core/: configs.py  logger.py  schedule.py
src/data/database/: database.json  notify_list.json
src/data/logs/: kisb.log.old
src/data/playtimeData/: meta.json
src/discord/: _kisb.py  bot.py  main.py
src/discord/cache/: CACHE
src/discord/data/database/: database.json
src/discord/data/playtimeData/: data.sqlite  meta.json
src/discord/modules/commands/: admin.py  user.py
src/discord/modules/dataManager/: _loop.py  _manager.py
src/discord/modules/modPlaytimeTracker/: _tasks.py  discord.py
src/discord/modules/setup/: logging.py
src/modules/: logging.py  minecraft.py  pz.py  restart.py  rust.py  scpsl.py
src/modules/commands/: admin.py  user.py
src/modules/dataManager/: _loop.py  _manager.py  scpsl.py
src/modules/discord/: _kisb.py  main.py
src/modules/discord/aio_files/: channel_check.py
src/modules/discord/cogs/: pub_embed.py
src/modules/modEmbed/: discord.py
src/modules/modPlaytimeTracker/: _database.py  _tasks.py  discord.py
src/modules/setup/: logging.py
src/modules/slAPI/: data.py  main.py
src/modules/userTracking/: main.py
src/web/: main.py
src/web/modules/setup/: logging.py
src/web/static/errors/403/: index.html
src/web/static/login/: index.html  index.js  style.css
src/web/static/root/: index.html  style.css
