
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "J-Stuff", email = "jstuff@j-stuff.net"},
]
dependencies = [
    "discord-py>=2.3.1",
    "tinydb>=4.8.0",
    "mcstatus>=11.0.0",
    "requests>=2.31.0",
    "zomboid-rcon>=1.0.2",
    "rustplus>=5.6.9",
    "steamquery>=1.0.2",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
