[project]
name = "KISB"
version = "2.0.0"
description = "Default template for PDM package"
authors = [
    {name = "J Stuff", email = "jstuff@j-stuff.net"},
]
dependencies = [
    "schedule>=1.2.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "filelock>=3.16.1",
    "discord-py>=2.4.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}


[tool.pdm]
distribution = false
